src/objects/kdGpsTracking__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateFormula__c</fullName>
        <formula>Datevalue(Datetime__c)</formula>
        <label>Date (Formula)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Datetime__c</fullName>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GPSTracking_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GPSトラッキング</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Datetime__c</columns>
        <columns>GeoLocation__Latitude__s</columns>
        <columns>GeoLocation__Longitude__s</columns>
        <columns>Address__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GT-{0000000000}</displayFormat>
        <label>GPSトラッキング Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>